--- a/index/cv.html
+++ b/index/cv.html
@@ -68,20 +68,20 @@
       <!-- objectif with descriptions -->
 
         <section class="bg-primary" id="competences">
-                <div class="container overflow-hidden">
+                <div class="container">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
                       <h2 class="cadre-text"> Compétences</h2>
                       <hr class="light">
                       <pre class="text">
-            Connaissance en langage informatique HTML, CSS, PYTHON, C.
-            Forte en Informatique et Microsoft Office.
-            Accueil des usagés .
-            Activités administratives diverses liées au service.
-            Aptitude à travailler en équipe.
-            Prise d'initiatives et résolution de problèmes.
-            Capacité à actualiser ses connaissances.
-            Capacité à travailler sous pression et à gérer le stress.
+Connaissance en langage informatique HTML, CSS, PYTHON, C.
+Forte en Informatique et Microsoft Office.
+Accueil des usagés .
+Activités administratives diverses liées au service.
+Aptitude à travailler en équipe.
+Prise d'initiatives et résolution de problèmes.
+Capacité à actualiser ses connaissances.
+Capacité à travailler sous pression et à gérer le stress.
                       </pre>
                     </div>
                   </div>
