--- a/index/cv.html
+++ b/index/cv.html
@@ -57,7 +57,10 @@
             <div class="container text-center">
             <div class="call-to-action">
                 <h2>Belkhadiri Rihab - Etudiante en Développement web !</h2>
-                <a href="index/BelkhadiriRihabCV.pdf" class="btn btn-default btn-xl wow tada" > Téléchargez mon CV au format PDF !</a>
+                <div class="btn btn-default btn-xl">
+                  <a href="index/BelkhadiriRihabCV.pdf" class="btn btn-default btn-xl wow tada" > Téléchargez mon CV au format PDF !</a>
+
+                </div>
             </div>
         </div>
         </div>
@@ -67,7 +70,7 @@
 
       <!-- objectif with descriptions -->
 
-        <section class="bg-primary" id="competences">
+        <section class="bg-light" id="competences">
                 <div class="container">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
@@ -173,6 +176,7 @@ Capacité à travailler sous pression et à gérer le stress.
       </div>
     </header> -->
 
+    <!--# toolbar = 0-->
 
 
     <script type="text/javascript">
