changing the mise en page

--- a/index/cv.html
+++ b/index/cv.html
@@ -11,7 +11,12 @@
   <body id="haut">
     <nav class="navbar navbar-expand-sm navbar-white fixed-top affix" id="navbar">
       <div class="container-fluid">
-
+        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="true" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button> -->
         <a  class="navbar-brand page-scroll" href="#haut">Belkhadiri Rihab</a>
       </div>
 
@@ -19,7 +24,7 @@
       <!-- the start navbar -->
 
       <div class="container-fluid">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto" id="bs-example-navbar-collapse-1">
 
           <li class="nav-item">
 
@@ -57,16 +62,18 @@
                 parfaire mes compétences acquise durant mon L1 Info-Math pour
                 faire de ma passion mon métier.
               </p>
-              <a href="#about" style="display: block; width: 500px; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 30px;  font-family: Arial; border-radius: 20px; text-decoration: none;" class="btn btn-light btn-xl page-scroll ">Qui suis-je ?</a>
+              <div class="btn btn-default btn-sm">
+                <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem;; border-radius: 15px; text-decoration: none;" class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
+              </div>
       </header>
-      <section class=" bg-muted">
+      <section class=" bg-dark">
 
             <div class="container text-center">
             <div class="call-to-action">
                 <h2 style="color: wheat; text-align: center; font-family: 'Pacifico', cursive;">Belkhadiri Rihab - Etudiante en Développement web !</h2>
-                <p>etudiante en formation de developpelment web, c'etaits toujours mon reve de devenir une developpeuse web. Je suis passionnée par tout ce qu'est</p>
+                <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">etudiante en formation de developpelment web, c'etaits toujours mon reve de devenir une developpeuse web. Je suis passionnée par tout ce qu'est</p>
                 <div class="btn btn-default btn-xl">
-                  <a style="display: block; width: 500px; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 30px; line-height: 100px; font-family: Arial; border-radius: 20px; text-decoration: none;" href="index/celinne.pdf" class="btn btn-default btn-xl wow tada hover" > Téléchargez mon CV !</a>
+                  <a style="display: block; width: 500px; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 30px; line-height: 100px; font-family: Arial; border-radius: 20px; text-decoration: none;" href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
 
                 </div>
             </div>
@@ -84,45 +91,45 @@
                     <div class="col-lg-8 offset-2 text-center">
                       <h2 class="cadre-text"> Compétences</h2>
                       <hr class="light">
-                      <pre class="text">
-Connaissance en langage informatique HTML, CSS, PYTHON, C.
-Forte en Informatique et Microsoft Office.
-Accueil des usagés .
-Activités administratives diverses liées au service.
-Aptitude à travailler en équipe.
-Prise d'initiatives et résolution de problèmes.
-Capacité à actualiser ses connaissances.
-Capacité à travailler sous pression et à gérer le stress.
-                      </pre>
+                      <ul class="list" style="text-align: center;">
+                        <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
+                        <li>Forte en Informatique et Microsoft Office.</li>
+                        <li>Accueil des usagés .</li>
+                        <li>Activités administratives diverses liées au service.</li>
+                        <li>Aptitude à travailler en équipe.</li>
+                        <li>Prise d'initiatives et résolution de problèmes.</li>
+                        <li>Capacité à actualiser ses connaissances.</li>
+                        <li>Capacité à travailler sous pression et à gérer le stress.</li>
+                      </ul>
                     </div>
                   </div>
                   </div>
                 </div>
           </section>
-          <section  id="formation">
+          <section  class="bg-dark" id="formation">
                   <div class="container">
                     <div class="row">
                       <div class="col-lg-8 offset-2 text-center">
-                        <h3 class="cadre-text" ><strong> Mes Formations</strong></h3>
+                        <h3 class="cadre-text"  style="color: wheat;" ><strong> Mes Formations</strong></h3>
                         <hr class="light">
-                        <ul class="list">
+                        <ul class="list" style="color: wheat;">
                           <li><strong>2019-2020| Formation développeure web intégrateur niveau III</strong></li>
-                            <pre>ALAJI | viller lès-Nancy</pre>
+                            <pre style="color: wheat;">ALAJI | viller lès-Nancy</pre>
                           <li><strong>2018-2019 | L1 Informatique-Mathématique</strong></li>
-                            <pre>Faculté des sciences ettechnologies |Vandœuvre lés Nancy</pre>
+                            <pre style="color: wheat;">Faculté des sciences ettechnologies |Vandœuvre lés Nancy</pre>
                           <li><strong>2017-2018 | Formation DEFLE</strong></li>
-                            <pre>Faculté des lettres et sciences humaines</pre>
+                            <pre style="color: wheat;">Faculté des lettres et sciences humaines</pre>
                           <li><strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong></li>
-                            <pre>Lycée 86éme | DjeddahArabie Saoudite</pre>
+                            <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
                           <li><strong>2013-2014 | Formation en Informatique générale</strong></li>
-                            <pre>Lycée 86éme | DjeddahArabie Saoudite</pre>
+                            <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
                       </ul>
 
                     </div>
                   </div>
                 </div>
           </section>
-          <section id="experiences">
+          <section class="bg-light" id="experiences">
               <div class="container">
                 <div class="row">
                   <div class="col-lg-8 offset-2 text-center">
