--- a/index/cv.html
+++ b/index/cv.html
@@ -7,6 +7,30 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>CURRICULUM VITAE</title>
+    <style>
+      #myDIV {
+
+        height: 100px;
+        background: #113548;
+        -webkit-animation: mymove 2s infinite; /* Safari 4.0 - 8.0 */
+        animation: mymove 2s infinite;
+      }
+
+      /* Safari 4.0 - 8.0 */
+      @-webkit-keyframes mymove {
+        50% {background-color: #C59296;}
+        0% {box-shadow: 10px 20px 30px #D84C5F;}
+      }
+
+      @keyframes mymove {
+        50% {background-color: #C59296;}
+        50% {box-shadow: 10px 20px 30px #D84C5F;}
+      }
+
+      /* Safari 4.0 - 8.0 */
+
+
+    </style>
   </head>
   <body id="haut">
     <nav class="navbar navbar-expand-sm navbar-white fixed-top affix" id="navbar">
@@ -56,7 +80,7 @@
 
         <div class="header-content">
             <div class="header-content-inner">
-              <h1 style="color: wheat;">Développeuse Web</h1>
+              <h1  id="myDIV" style="color: wheat;">Développeuse Web</h1>
               <hr>
               <p style="text-align: cente">Devenir une développeuse Web. Je suis prête et motivée pour
                 parfaire mes compétences acquise durant mon L1 Info-Math pour
@@ -164,7 +188,7 @@
                 <div class="containers-fluid">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
-                      <h3 class="cadre-text text-align-centre"> <strong>Contacte</strong></h3>
+                      <h3 class="cadre-text text-align-centre"> <strong>Contact</strong></h3>
                         <p class="num">+ 33 07 61 22 25 37</p>
                         <p class="mail">Rihabelkhadiri@hotmail.com</p>
                         <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
