--- a/index/cv.html
+++ b/index/cv.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-        </button> -->
+        </button>  -->
         <a  class="navbar-brand page-scroll" href="#haut">Belkhadiri Rihab</a>
       </div>
 
@@ -82,22 +82,25 @@
             <div class="header-content-inner">
               <h1  id="myDIV" style="color: wheat;">Développeuse Web</h1>
               <hr>
-              <p style="text-align: cente">Devenir une développeuse Web. Je suis prête et motivée pour
+              <!-- <p style="text-align: cente">Devenir une développeuse Web. Je suis prête et motivée pour
                 parfaire mes compétences acquise durant mon L1 Info-Math pour
                 faire de ma passion mon métier.
-              </p>
-              <div class="btn btn-default btn-sm">
-                <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem;; border-radius: 15px; text-decoration: none;" class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
+              </p> -->
+              <div class="btn btn-default btn-lg" style="padding-left:550px; padiing: 30px; margin-bottom:50px;">
+                <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem; border-radius: 30px; text-decoration: none; padding: 15px 30px; " class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
               </div>
       </header>
-      <section class=" bg-dark">
+      <section class=" bg-dark" id="about">
 
             <div class="container text-center">
             <div class="call-to-action">
-                <h2 style="color: wheat; text-align: center; font-family: 'Pacifico', cursive;">Belkhadiri Rihab - Etudiante en Développement web !</h2>
-                <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">etudiante en formation de developpelment web, c'etaits toujours mon reve de devenir une developpeuse web. Je suis passionnée par tout ce qu'est</p>
+                <h2  style="color: wheat; text-align: center; font-family: 'Pacifico', cursive; padding:70px; ">Belkhadiri Rihab - Etudiante en Développement web !</h2>
+                <hr>
+                <p style="font-size: 20px; color: wheat;font-family: 'Merienda', cursive;">J’ai eu un Bac S avec mention trés bien en arabie saudite, J’ai fait un an à la faculté des sciences et technology en informatique et mathématique. Actuellemnt je suis en Formation de dévellepement web au seins de ALAJI a viller lès nancy, c’étais le bon chois d’intégre cette formation car je suis entrain de faire des choses qui me plaire. Devenir une développeuse Web. Je suis prête et motivée pour
+                  parfaire mes compétences acquise durant mon L1 Info-Math pour
+                  faire de ma passion mon métier</p>
                 <div class="btn btn-default btn-xl">
-                  <a style="display: block; width: 500px; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 30px; line-height: 100px; font-family: Arial; border-radius: 20px; text-decoration: none;" href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
+                  <a style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 20px; line-height: 50px; font-family: Arial; border-radius: 30px; text-decoration: none;" href="index/celinne.pdf" class="btn btn-default btn-xl hover" > Téléchargez mon CV !</a>
 
                 </div>
             </div>
