--- a/index/cv.html
+++ b/index/cv.html
@@ -86,7 +86,7 @@
                 parfaire mes compétences acquise durant mon L1 Info-Math pour
                 faire de ma passion mon métier.
               </p> -->
-              <div class="btn btn-default btn-lg" style="padding-left:550px; padiing: 30px; margin-bottom:50px;">
+              <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
                 <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem; border-radius: 30px; text-decoration: none; padding: 15px 30px; " class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
               </div>
       </header>
@@ -116,7 +116,7 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
-                      <h2 class="cadre-text"> Compétences</h2>
+                      <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
                       <hr class="light">
                       <ul class="list" style="text-align: center;">
                         <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
@@ -160,7 +160,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-lg-8 offset-2 text-center">
-                    <h3 class="cadre-text"><strong>Expériences</strong></h3>
+                    <h3 class="cadre-text" ><strong>Expériences</strong></h3>
                     <hr class="light">
                     <ul class="list">
                       <li><strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong></li>
@@ -191,7 +191,7 @@
                 <div class="containers-fluid">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
-                      <h3 class="cadre-text text-align-centre"> <strong>Contact</strong></h3>
+                      <h3 class="cadre-text text-align-centre" style="coclor:wheat;"> <strong>Contact</strong></h3>
                         <p class="num">+ 33 07 61 22 25 37</p>
                         <p class="mail">Rihabelkhadiri@hotmail.com</p>
                         <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
