--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>CURRICULUM VITAE</title>
     <style>
       #myDIV {
@@ -32,7 +33,7 @@
 
     </style>
   </head>
-  <body id="haut">
+  <body id="haut" >
     <nav class="navbar navbar-expand-sm navbar-white fixed-top affix" id="navbar">
       <div class="container-fluid">
         <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="true" data-target="#bs-example-navbar-collapse-1">
@@ -86,7 +87,7 @@
                 parfaire mes compétences acquise durant mon L1 Info-Math pour
                 faire de ma passion mon métier.
               </p> -->
-              <div class="btn btn-default btn-lg" style="padding-left:550px; padiing: 30px; margin-bottom:50px;">
+              <div class="btn btn-default btn-lg" style="padding-left:530px; padiing: 30px; margin-bottom:50px;">
                 <a href="#about" style="display: block; background: #606060; color: #ffffff; text-align: center; font-weight: bold; font-size: 25px; line-height: 2rem; border-radius: 30px; text-decoration: none; padding: 15px 30px; " class="btn btn-default btn-xl hover page-scroll ">Qui suis-je ?</a>
               </div>
       </header>
@@ -116,7 +117,7 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
-                      <h2 class="cadre-text"> Compétences</h2>
+                      <h2 class="cadre-text" style="font-wieght: bold; color:#224656;"> Compétences</h2>
                       <hr class="light">
                       <ul class="list" style="text-align: center;">
                         <li>Connaissance en langage informatique HTML, CSS, PYTHON, C.</li>
@@ -141,11 +142,11 @@
                         <hr class="light">
                         <ul class="list" style="color: wheat;">
                           <li><strong>2019-2020| Formation développeure web intégrateur niveau III</strong></li>
-                            <pre style="color: wheat;">ALAJI | viller lès-Nancy</pre>
+                            <pre style="color: wheat;">ALAJI | villers lès-Nancy</pre>
                           <li><strong>2018-2019 | L1 Informatique-Mathématique</strong></li>
-                            <pre style="color: wheat;">Faculté des sciences ettechnologies |Vandœuvre lés Nancy</pre>
+                            <pre style="color: wheat;">Faculté des sciences et technologies |Vandœuvre lès Nancy</pre>
                           <li><strong>2017-2018 | Formation DEFLE</strong></li>
-                            <pre style="color: wheat;">Faculté des lettres et sciences humaines</pre>
+                            <pre style="color: wheat;">Faculté de lettres et sciences humaines</pre>
                           <li><strong>2015-2016 | Baccalauréat Scientifique, Mention très bien</strong></li>
                             <pre style="color: wheat;">Lycée 86éme | DjeddahArabie Saoudite</pre>
                           <li><strong>2013-2014 | Formation en Informatique générale</strong></li>
@@ -160,7 +161,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-lg-8 offset-2 text-center">
-                    <h3 class="cadre-text"><strong>Expériences</strong></h3>
+                    <h3 class="cadre-text" ><strong>Expériences</strong></h3>
                     <hr class="light">
                     <ul class="list">
                       <li><strong>2019-2020 | Service civique à Pôle emploi, Nancy Cristallerie(8 mois)</strong></li>
@@ -191,7 +192,7 @@
                 <div class="containers-fluid">
                   <div class="row">
                     <div class="col-lg-8 offset-2 text-center">
-                      <h3 class="cadre-text text-align-centre"> <strong>Contact</strong></h3>
+                      <h3 class="cadre-text text-align-centre" style="coclor:wheat;"> <strong>Contact</strong></h3>
                         <p class="num">+ 33 07 61 22 25 37</p>
                         <p class="mail">Rihabelkhadiri@hotmail.com</p>
                         <p class="adresse">11,avenue du charmois 54500 NANCY, FRANCE</p>
